# PCL-Workspace

./: README.md
PCL_Workspace/3D_Obj_Recog_Hyp_Ver/: 3D_Obj_Recog_Hyp_Ver.cpp  3D_Obj_Recog_Hyp_Ver.cpp~  CMakeLists.txt
PCL_Workspace/3D_Object_Recognition/: correspondence_grouping.cpp
PCL_Workspace/CVFH/: CMakeLists.txt  cvfh.cpp  cvfh.cpp~  cvfh.hpp  cvfh.hpp~  cvfh.h~  icp.cpp~  vfh.cpp~  vfh.hpp  vfh.hpp~
PCL_Workspace/Clustering_Euclidean_Extraction/: CMakeLists.txt  clustering.cpp
PCL_Workspace/ConditionalEuclideanClustering/: conditional_euclidean_clustering.cpp
PCL_Workspace/Curve_fitting/: CMakeLists.txt  correspondence_grouping.cpp~  curve_fitting.cpp  curve_fitting.cpp~
PCL_Workspace/Descriptor_SpinImageEstimation/: CMakeLists.txt  descriptor.cpp
PCL_Workspace/Descriptors_Matching/: CMakeLists.txt  correspondences.cpp  correspondences.cpp~
PCL_Workspace/Edge_detection/: CMakeLists.txt  CMakeLists.txt~  Edge_detection.cpp  Edge_detection.cpp~  Edge_detection0.cpp  Edge_detection1.cpp~  Edge_detection2.cpp  Edge_detection3.cpp  Edge_detection4.cpp  Edge_detection5.cpp  Edge_detection6.cpp  Edge_detection7.cpp  Edge_detection_online.cpp~  organized_edge_detection (copy).hpp  organized_edge_detection.hpp~  organized_edge_detection.h~  organized_edge_detection2.hpp
PCL_Workspace/Edge_detection_online/: CMakeLists.txt  CMakeLists.txt~  Edge_detection_online.cpp
PCL_Workspace/Feature_Matching/: CMakeLists.txt  feature_matching.cpp  feature_matching.cpp~
PCL_Workspace/Find_Transformation/: CMakeLists.txt  find_tf.cpp  find_tf.cpp~  find_tf2.cpp  find_tf3.cpp
PCL_Workspace/GFPFH/: CMakeLists.txt  gfpfh.cpp  gfpfh.cpp~  vfh.cpp~
PCL_Workspace/Hough3D_Clustering/: CMakeLists.txt  CMakeLists.txt~  Hough3D.cpp  Hough3D.cpp~
PCL_Workspace/Mouse_input/: CMakeLists.txt  Mouse_input.cpp  Mouse_input.cpp~
PCL_Workspace/Object_Recognition_CVFH/: correspondence_grouping.cpp  correspondence_grouping.cpp~
PCL_Workspace/Online_Object_Recognition/: CMakeLists.txt  Online_Object_Recognition.cpp  Online_Object_Recognition.cpp~
PCL_Workspace/Online_Registration/: CMakeLists.txt  CMakeLists.txt~  Online_Registration.cpp  Online_Registration.cpp~
PCL_Workspace/Online_Segmentation/: Online_Segmentation.cpp  Online_Segmentation.cpp~
PCL_Workspace/Openni_Grabber/: CMakeLists.txt  CMakeLists.txt~  Openni_Grabber.cpp  Openni_Grabber.cpp.save  Openni_Grabber.cpp~
PCL_Workspace/PMF_segmentation/: CMakeLists.txt  CMakeLists.txt~  pmf.cpp  pmf.cpp~  vfh.cpp~
PCL_Workspace/Reference_frame/: Reference_frame.cpp  Reference_frame.cpp~
PCL_Workspace/Region_Growing/: region_growing_segmentation.cpp  region_growing_segmentation.cpp~
PCL_Workspace/Registration/: registration.cpp  registration.cpp~
PCL_Workspace/Registration2/: CMakeLists.txt  CMakeLists.txt~  regidtration_New.cpp~  registration_New.cpp  test_registration_api.cpp~
PCL_Workspace/Registration_ICP/: CMakeLists.txt  registration.cpp  registration.cpp~
PCL_Workspace/Registration_NDT/: CMakeLists.txt  registration.cpp~  registration_NDT.cpp  registration_NDT.cpp~
PCL_Workspace/Segmentation_Cylider/: CMakeLists.txt  Segment_Cylinder.cpp  Segment_Cylinder.cpp~
PCL_Workspace/Segmentation_DNBS/: CMakeLists.txt  segmentation.cpp  segmentation.cpp~
PCL_Workspace/Segmentation_Supervoxels_Clustering/: CMakeLists.txt  segmentation.cpp  segmentation.cpp~
PCL_Workspace/Select_Point/: CMakeLists.txt  Select_Point.cpp  Select_Point2.cpp  Select_Point3.cpp
PCL_Workspace/Shot_descriptor/: CMakeLists.txt  shot.cpp
PCL_Workspace/Shot_descriptor_over_Keypoints/: CMakeLists.txt  shot.cpp~  shot_New.cpp
PCL_Workspace/Tracking/: CMakeLists.txt
PCL_Workspace/Tracking_PCL/: tracking.cpp~
PCL_Workspace/Transformation_Robot_Kinect/: CMakeLists.txt  Coord_Transformation.h  Coord_Transformation.h~  Transformation.cpp  Transformation.cpp~
PCL_Workspace/VFH/: CMakeLists.txt~  vfh.cpp  vfh.cpp~  vfh.hpp  vfh.h~
PCL_Workspace/VFH_RegionGrowing/: CMakeLists.txt  CMakeLists.txt~  vfh.cpp~  vfh.h  vfh.hpp  vfh.hpp~  vfh_RG.cpp  vfh_RG.cpp~
PCL_Workspace/Voxelgrid_Filter/: voxel_grid.cpp~
PCL_Workspace/keypoint_NARF/: narf_keypoint_extraction.cpp  narf_keypoint_extraction.cpp~
PCL_Workspace/normal_comp/: CMakeLists.txt  CMakeLists.txt~  normal_comp.cpp~
PCL_Workspace/pcd2ply/: CMakeLists.txt  pcd2ply.cpp  pcd2ply.cpp~
PCL_Workspace/pfh/: CMakeLists.txt  pfh.cpp  pfh.cpp~
PCL_Workspace/ply2pcd/: CMakeLists.txt~  ply2pcd.cpp  ply2pcd.cpp~
PCL_Workspace/point_cloud_compression/: CMakeLists.txt  CMakeLists.txt~  point_cloud_compression.cpp  point_cloud_compression.cpp~
PCL_Workspace/range_image_visualizer/: range_image_visualization.cpp~
(+18 files in other folders)
